[3.6] bpo-31492: Fix assertion failures in case of a module with a bad __name__ attribute. (GH-3620). (cherry picked from commit 6db7033192cd537ca987a65971acb01206c3ba82)